--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color: white;
+  cursor: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle fill="#000" cx="12" cy="12" r="6"/><rect fill="none" width="24" height="24"/></svg>') 12 12, auto;
 }
 
 .App-logo {
@@ -38,7 +39,7 @@
   }
 }
 
-/* Login stuff */
+/* LOGIN PAGE */
 
 .Auth-form-container {
   display: flex;
@@ -49,12 +50,22 @@
 }
 
 .Auth-form {
-  width: 420px;
-  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
-  padding-top: 30px;
-  padding-bottom: 20px;
-  border-radius: 10px;
-  background-color: white;
+  width: 50vw;;
+  border-radius: 30px;
+  border-style: ridge 10px;
+  padding: 12px 20px;
+  margin: 10px 0;
+  border: none;
+  background: #F7F7F7;
+  font-size: 16px;
+}
+
+.submit {
+  border-radius: 30px;
+  padding: 12px 20px;
+  margin-top: 20px;
+  font-size: 16px;
+  border: none;
 }
 
 .Auth-form-content {
@@ -69,6 +80,75 @@
   color: rgb(34, 34, 34);
   font-weight: 800;
 }
+
+.btn {
+  border-radius: 30px;
+  padding: 12px 20px;
+  margin-top: 20px;
+  font-size: 16px;
+  transition: transform 0.5s ease-in-out;
+  border: none;
+  position: relative;
+  overflow: hidden;
+}
+
+.btn::before{
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.5);
+  opacity: 0;
+}
+
+.btn:hover::before {
+  animation: swim 0.5s ease-out forwards;
+}
+
+.btn:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  opacity: 0;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.btn:hover:after {
+  opacity: 1;
+}
+
+
+.btn-primary:hover {
+  transform: scale(1.05);
+}
+
+
+@keyframes swim {
+  0% {
+    height: 0;
+    opacity: 0;
+  }
+  50% {
+    height: 150%;
+    opacity: 1;
+  }
+  100% {
+    height: 200%;
+    opacity: 0;
+  }
+}
+
 
 /* LOGO STUFF */
 
