--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,44 @@
 .App {
   text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.App {
+  text-align: center;
   background-color: white;
   cursor: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle fill="#000" cx="12" cy="12" r="6"/><rect fill="none" width="24" height="24"/></svg>') 12 12, auto;
 }
@@ -157,111 +196,19 @@
   padding-right: 50vw;
 }
 
+.homepage_navbar {
+  background-color: #B0AC8F;
+  
+}
+
+.homepage_navbar ul , li {
+  display: inline;
+  text-decoration: none;
+  list-style-type: none;
+}
+
 label {
   font-size: 14px;
   font-weight: 600;
   color: rgb(34, 34, 34);
-}
-
-:root {
-  --bg:  #244B68;
-  --bg-accent: #484a4d;
-  --text-color: #000000;
-  --nav-size: 60px;
-  --border: 1px solid #474a4d;
-  --border-radius: 8px;
-  --speed: 500ms; 
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: var(--text-color);
-  text-decoration: none;
-}
-
-.navbar {
-  height: var(--nav-size);
-  background-color: var(--bg);
-  padding: 0 1rem;
-}
-
-.navbar-nav {
-  max-width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.nav-item {
-  width: calc(var(--nav-size) * 0.8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.icon-button {
-  --button-size: calc(var(--nav-size) * 0.5);
-  width: var(--button-size);
-  height: var(--button-size);
-  background-color: #FAF7EE;
-  border-radius: 50%;
-  padding: 5px;
-  margin: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: filter 300ms;
-}
-
-.icon-button:hover {
-  filter: brightness(1.2);
-}
-
-.icon-button svg { 
-  fill: var(--text-color);
-  width: 25px;
-  height: 25px;
-}
-
-.dropdown {
-  position: absolute;
-  top: 65px;
-  width: 150px;
-  transform: translateX(-38%);
-  background-color: var(--bg);
-  border: var(--border);
-  border-radius: var(--border-radius);
-  padding: 0rem;
-  transition: height var(--speed) ease;
-}
-
-.menu-item {
-  height: 50px;
-  display: flex;
-  align-items: center;
-  border-radius: var(--border-radius);
-  transition: background var(--speed);
-  padding: 0.5rem;
-}
-
-.menu-item:hover {
-  background-color: #FAF7EE;
-}
-
-.logo {
-  flex: 1;
-  display: flex;
-  align-items: center;
-}
-
-.settings {
-  font-family: 'Red Hat Display', sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  color: #000000;
 }
